--- a/collection.html
+++ b/collection.html
@@ -82,37 +82,37 @@
                         <p style="font-size: 1vw;"><i class="fa-solid fa-indian-rupee-sign"></i> 220</p>
                     </div>
                     <div class="product-images">
-                        <img src="./images/f2 (1).jpg" alt="" style="width: 20vw;">
+                        <img src="./images/f02.jpg" alt="" style="width: 20vw;">
                         <h4> Party Floral Shirt</h4>
                         <p style="font-size: 1vw;"><i class="fa-solid fa-indian-rupee-sign"></i> 220</p>
                     </div>
                     <div class="product-images">
-                        <img src="./images/f3 (1).jpg" alt="" style="width: 20vw;">
+                        <img src="./images/f03.jpg" alt="" style="width: 20vw;">
                         <h4>Shirt Party Red</h4>
                         <p style="font-size: 1vw;"><i class="fa-solid fa-indian-rupee-sign"></i> 220</p>
                     </div>
                     <div class="product-images">
-                        <img src="./images/f4 (1).jpg" alt="" style="width: 20vw;">
+                        <img src="./images/f04.jpg" alt="" style="width: 20vw;">
                         <h4>Floral Summer Shirt</h4>
                         <p style="font-size: 1vw;"><i class="fa-solid fa-indian-rupee-sign"></i> 220</p>
                     </div>
                     <div class="product-images">
-                        <img src="./images/f5 (1).jpg" alt="" style="width: 20vw;">
+                        <img src="./images/f05.jpg" alt="" style="width: 20vw;">
                         <h4>Beach Shirt</h4>
                         <p style="font-size: 1vw;"><i class="fa-solid fa-indian-rupee-sign"></i> 220</p>
                     </div>
                     <div class="product-images">
-                        <img src="./images/f6 (1).jpg" alt="" style="width: 20vw;">
+                        <img src="./images/f06.jpg" alt="" style="width: 20vw;">
                         <h4>Shirt Party Red</h4>
                         <p style="font-size: 1vw;"><i class="fa-solid fa-indian-rupee-sign"></i> 220</p>
                     </div>
                     <div class="product-images">
-                        <img src="./images/f3 (1).jpg" alt="" style="width: 20vw;">
+                        <img src="./images/f03.jpg" alt="" style="width: 20vw;">
                         <h4>Party Floral Shirt</h4>
                         <p style="font-size: 1vw;"><i class="fa-solid fa-indian-rupee-sign"></i> 220</p>
                     </div>
                     <div class="product-images">
-                        <img src="./images/f6 (1).jpg" alt="" style="width: 20vw;">
+                        <img src="./images/f06.jpg" alt="" style="width: 20vw;">
                         <h4>Shirt Party Red</h4>
                         <p style="font-size: 1vw;"><i class="fa-solid fa-indian-rupee-sign"></i> 220</p>
                     </div>
