--- a/index.html
+++ b/index.html
@@ -52,12 +52,11 @@
             <button>Shop Now <i class="fa-solid fa-arrow-right"></i></button>
         </div>
         <div class="slider__img" style="margin-right: 20px;">
-            <img src="/images/slider-one.jpg" alt="images">
+            <img src="./images/slider-one.jpg" alt="images">
         </div>
         <div class="sliderright__button">
             <i class="fa-solid fa-greater-than"></i>
         </div>
-
     </div>
 
     <!-- Brand -->
@@ -173,25 +172,25 @@
     <h2 style="margin-top: 4vw; margin-left: 10px;" id="most-wanted">Most Wanted</h2>
     <div class="most-wanted" style="margin-left: 10px; margin-right: 10px;">
         <div class="most-wanted__container">
-            <img src="/images/f5.jpg" style="width: 20vw;border-radius: 10px;" alt="">
+            <img src="./images/f5.jpg" style="width: 20vw;border-radius: 10px;" alt="">
            <i class="fa-regular fa-heart"></i>
             <button>sale</button>
         </div>
 
         <div class="most-wanted__container">
-            <img src="/images/f1.jpg" style="width: 20vw; border-radius: 10px;" alt="">
+            <img src="./images/f1.jpg" style="width: 20vw; border-radius: 10px;" alt="">
           <i class="fa-regular fa-heart"></i>
            <button>sale</button>
         </div>
 
         <div class="most-wanted__container">
-            <img src="/images/f4.jpg" style="width: 20vw; border-radius: 10px;" alt="">
+            <img src="./images/f2.jpg" style="width: 20vw; border-radius: 10px;" alt="">
            <i class="fa-regular fa-heart"></i>
           <button>sale</button>
         </div>
 
         <div class="most-wanted__container">
-            <img src="/images/f3.jpg" style="width: 20vw; border-radius: 10px;" alt="">
+            <img src="./images/f3.jpg" style="width: 20vw; border-radius: 10px;" alt="">
             <i class="fa-regular fa-heart"></i>
             <button>sale</button>
         </div>
