changes in javascript

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- slider -->
     <div class="slider" style="color: white;">
         <div class="sliderleft__button">
-            <i class="fa-solid fa-less-than"></i>
+            <i class="fa-solid fa-less-than" id="slider-left"></i>
         </div>
         <div class="slider__content">
             <h1>Level up your style with our</h1>
@@ -53,11 +53,17 @@
         </div>
         <div class="slider__img" style="margin-right: 20px;">
             <img src="./images/slider-one.jpg" alt="images">
+            <img src="./images/slider-one.jpg" alt="">
+            <img src="./images/slider-one.jpg" alt="">
         </div>
         <div class="sliderright__button">
-            <i class="fa-solid fa-greater-than"></i>
+            <i class="fa-solid fa-greater-than" id="slider-right"></i>
         </div>
     </div>
+    <script src="script.js"></script>
+</body>
+
+
 
     <!-- Brand -->
  <h2 style="margin-top: 4vw; margin-left: 10px; "> Brand</h2>
