--- a/index.html
+++ b/index.html
@@ -25,20 +25,32 @@
         <p>Sign up and <b>Get 20% off</b> for your first oder</p>
         <p id="cross" style="margin-left: 15px; cursor: pointer;">X</p>
     </div>
- 
+
     <!-- navbar -->
     <div class="navbar">
         <h1> Nostar</h1>
         <div class="navbar__menu">
-           <p><a href="index.html">Home</a></p>
-           <p><a href="#new-arrival">New Arrival</a></p>
-           <p><a href="#most-wanted"> Most Wanted</a></p>
-           <p><a href="collection.html"> Collections</a></p>
-           <p><a href="contact.html">Contact Us</a></p>
+            <p><a href="index.html">Home</a></p>
+            <p><a href="#new-arrival">New Arrival</a></p>
+            <p><a href="#most-wanted"> Most Wanted</a></p>
+            <p><a href="collection.html"> Collections</a></p>
+            <p><a href="contact.html">Contact Us</a></p>
         </div>
         <div class="navbar__menu-1">
-            <i class="fa-solid fa-bars"></i>
+            <i id="side-navbar" class="fa-solid fa-bars" style="cursor: pointer;"></i>
         </div>
+    </div>
+
+    <!-- side navbar -->
+    <div class="side-menu">
+        <div class="side-menu-bar">
+            <p><a href="index.html">Home</a></p>
+            <p><a href="#new-arrival">New Arrival</a></p>
+            <p><a href="#most-wanted"> Most Wanted</a></p>
+            <p><a href="collection.html"> Collections</a></p>
+            <p><a href="contact.html">Contact Us</a></p>
+        </div>
+        <i id="side-navbar-close" class="fa-solid fa-xmark" style="cursor: pointer;"></i>
     </div>
 
     <!-- slider -->
@@ -60,182 +72,200 @@
             <i class="fa-solid fa-greater-than" id="slider-right"></i>
         </div>
     </div>
-    <script src="script.js"></script>
-</body>
 
-
-
-    <!-- Brand -->
- <h2 style="margin-top: 4vw; margin-left: 10px; "> Brand</h2>
-    <div class="brand">
-        <div class="brand__item" style="margin-right: 10px;">
-            <img src="images/icons/adidas.png" alt="" style="font-size:3vw; margin-bottom: 10px;">
-            <p>adidas</p>
-        </div>
-        <div class="brand__item">
-            <img src="images/icons/puma.png" alt="" style="font-size:3vw; margin-bottom: 10px;">
-            <p>puma</p>
-        </div>
-        <div class="brand__item">
-            <img src="images/icons/simple.png" alt="" style="font-size:3vw; margin-bottom: 10px;">
-            <p>simple</p>
-        </div>
-        <div class="brand__item">
-            <img src="images/icons/leaves.png" alt="" style="font-size:3vw; margin-bottom: 10px;">
-            <p>leaves</p>
-        </div>
-        <div class="brand__item">
-            <img src="images/icons/behance.png" alt="" style="font-size:3vw; margin-bottom: 10px;">
-            <p>behance</p>
-        </div>
-        <div class="brand__item">
-            <img src="images/icons/twitch.png" alt="" style="font-size:3vw; margin-bottom: 10px;">
-            <p>twitch</p>
-        </div>
+<!-- Brand -->
+<h2 style="margin-top: 4vw; margin-left: 10px; "> Brand</h2>
+<div class="brand">
+    <div class="brand__item" style="margin-right: 10px;">
+        <img src="images/icons/adidas.png" alt="" style="font-size:3vw; margin-bottom: 10px;">
+        <p>adidas</p>
     </div>
-    <!-- Service -->
-    <div class="service" style=" margin-left: 10px; margin-top: 5vw; margin-right: 10px;">
-        <div class="service-container__1">
-            <div>
-                <h2> We provide Best</h2>
-                <h2> Customer Experiences</h2>
-            </div>
-
-            <div>
-                <p style="margin-right: 0;">|| We ensure that our customer have the best shopping experience</p>
-            </div>
+    <div class="brand__item">
+        <img src="images/icons/puma.png" alt="" style="font-size:3vw; margin-bottom: 10px;">
+        <p>puma</p>
+    </div>
+    <div class="brand__item">
+        <img src="images/icons/simple.png" alt="" style="font-size:3vw; margin-bottom: 10px;">
+        <p>simple</p>
+    </div>
+    <div class="brand__item">
+        <img src="images/icons/leaves.png" alt="" style="font-size:3vw; margin-bottom: 10px;">
+        <p>leaves</p>
+    </div>
+    <div class="brand__item">
+        <img src="images/icons/behance.png" alt="" style="font-size:3vw; margin-bottom: 10px;">
+        <p>behance</p>
+    </div>
+    <div class="brand__item">
+        <img src="images/icons/twitch.png" alt="" style="font-size:3vw; margin-bottom: 10px;">
+        <p>twitch</p>
+    </div>
+</div>
+<!-- Service -->
+<div class="service" style=" margin-left: 10px; margin-top: 5vw; margin-right: 10px;">
+    <div class="service-container__1">
+        <div>
+            <h2> We provide Best</h2>
+            <h2> Customer Experiences</h2>
         </div>
 
-        <div class="service-container__2" style="margin-top: 20px;">
-            <div>
-                <i class="fa-regular fa-circle-check" style="font-size:3vw;margin-bottom: 10px;"></i>
-                <h4>Original Products</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit impedit officiis
-                    exercitationem. Quaerat aperiam corporis ab aliquam! Ipsum ad inventore, molestiae officiis ullam
-                    laborum, vel quibusdam illum rerum a aspernatur.
-                </p>
-            </div>
-
-            <div>
-                <i class="fa-regular fa-face-smile" style="font-size: 3vw;margin-bottom: 10px;"></i>
-                <h4>Satisfaction Guarantee</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit impedit officiis
-                    exercitationem. Quaerat aperiam corporis ab aliquam! Ipsum ad inventore, molestiae officiis ullam
-                    laborum, vel quibusdam illum rerum a aspernatur.
-                </p>
-            </div>
-
-            <div>
-                <i class="fa-solid fa-broom" style="font-size: 3vw;margin-bottom: 10px;"></i>
-                <h4>New Arrival Everyday</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit impedit officiis
-                    exercitationem.
-                    Quaerat aperiam corporis ab aliquam! Ipsum ad inventore, molestiae officiis ullam laborum, vel
-                    quibusdam
-                    illum rerum a aspernatur.
-                </p>
-            </div>
-
-            <div>
-                <i class="fa-solid fa-truck-fast" style="font-size: 3vw;margin-bottom: 10px;"></i>
-                <h4>Fast & Free Shipping</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit impedit officiis
-                    exercitationem.
-                    Quaerat aperiam corporis ab aliquam! Ipsum ad inventore, molestiae officiis ullam laborum, vel
-                    quibusdam
-                    illum rerum a aspernatur.
-                </p>
-            </div>
+        <div>
+            <p style="margin-right: 0;">|| We ensure that our customer have the best shopping experience</p>
         </div>
     </div>
 
-    <!-- New arrival -->
-    <h2 style="margin-top: 4vw; margin-left: 10px; " id="new-arrival">New Arrival</h2>
-    <div class="new-arrival" style="margin-left:10px;margin-right: 10px;">
-        <div class="new-arrival__container">
-            <img src="./images/f1.jpg" alt="" style="width: 20vw; border-radius: 10px;">
-            <div class="overlay" style="border-radius: 10px;"></div>
-            <button> Shop Now <i class="fa-solid fa-arrow-right"></i></button>
+    <div class="service-container__2" style="margin-top: 20px;">
+        <div>
+            <i class="fa-regular fa-circle-check" style="font-size:3vw;margin-bottom: 10px;"></i>
+            <h4>Original Products</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit impedit officiis
+                exercitationem. Quaerat aperiam corporis ab aliquam! Ipsum ad inventore, molestiae officiis ullam
+                laborum, vel quibusdam illum rerum a aspernatur.
+            </p>
         </div>
-        <div class="new-arrival__container">
-            <img src="./images/f2.jpg" alt="" style="width: 20vw; border-radius: 10px;">
-            <div class="overlay" style="border-radius: 10px;"></div>
-            <button> Shop Now <i class="fa-solid fa-arrow-right"></i></button>
+
+        <div>
+            <i class="fa-regular fa-face-smile" style="font-size: 3vw;margin-bottom: 10px;"></i>
+            <h4>Satisfaction Guarantee</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit impedit officiis
+                exercitationem. Quaerat aperiam corporis ab aliquam! Ipsum ad inventore, molestiae officiis ullam
+                laborum, vel quibusdam illum rerum a aspernatur.
+            </p>
         </div>
-        <div class="new-arrival__container">
-            <img src="./images/f3.jpg" alt="" style="width: 20vw; border-radius: 10px;">
-            <div class="overlay" style="border-radius: 10px;"></div>
-            <button> Shop Now <i class="fa-solid fa-arrow-right"></i></button>
+
+        <div>
+            <i class="fa-solid fa-broom" style="font-size: 3vw;margin-bottom: 10px;"></i>
+            <h4>New Arrival Everyday</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit impedit officiis
+                exercitationem.
+                Quaerat aperiam corporis ab aliquam! Ipsum ad inventore, molestiae officiis ullam laborum, vel
+                quibusdam
+                illum rerum a aspernatur.
+            </p>
         </div>
-        <div class="new-arrival__container">
-            <img src="./images/f4.jpg" alt="" style="width: 20vw; border-radius: 10px;">
-            <div class="overlay" style="border-radius: 10px;"></div>
-            <button> Shop Now <i class="fa-solid fa-arrow-right"></i></button>
+
+        <div>
+            <i class="fa-solid fa-truck-fast" style="font-size: 3vw;margin-bottom: 10px;"></i>
+            <h4>Fast & Free Shipping</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit impedit officiis
+                exercitationem.
+                Quaerat aperiam corporis ab aliquam! Ipsum ad inventore, molestiae officiis ullam laborum, vel
+                quibusdam
+                illum rerum a aspernatur.
+            </p>
         </div>
     </div>
+</div>
 
-    <!-- Most Wanted -->
-    <h2 style="margin-top: 4vw; margin-left: 10px;" id="most-wanted">Most Wanted</h2>
-    <div class="most-wanted" style="margin-left: 10px; margin-right: 10px;">
-        <div class="most-wanted__container">
-            <img src="./images/f5.jpg" style="width: 20vw;border-radius: 10px;" alt="">
-           <i class="fa-regular fa-heart"></i>
-            <button>sale</button>
-        </div>
+<!-- New arrival -->
+<h2 style="margin-top: 4vw; margin-left: 10px; " id="new-arrival">New Arrival</h2>
+<div class="new-arrival" style="margin-left:10px;margin-right: 10px;">
+    <div class="new-arrival__container">
+        <img src="./images/f1.jpg" alt="" style="width: 20vw; border-radius: 10px;">
+        <div class="overlay" style="border-radius: 10px;"></div>
+        <button> Shop Now <i class="fa-solid fa-arrow-right"></i></button>
+    </div>
+    <div class="new-arrival__container">
+        <img src="./images/f2.jpg" alt="" style="width: 20vw; border-radius: 10px;">
+        <div class="overlay" style="border-radius: 10px;"></div>
+        <button> Shop Now <i class="fa-solid fa-arrow-right"></i></button>
+    </div>
+    <div class="new-arrival__container">
+        <img src="./images/f3.jpg" alt="" style="width: 20vw; border-radius: 10px;">
+        <div class="overlay" style="border-radius: 10px;"></div>
+        <button> Shop Now <i class="fa-solid fa-arrow-right"></i></button>
+    </div>
+    <div class="new-arrival__container">
+        <img src="./images/f4.jpg" alt="" style="width: 20vw; border-radius: 10px;">
+        <div class="overlay" style="border-radius: 10px;"></div>
+        <button> Shop Now <i class="fa-solid fa-arrow-right"></i></button>
+    </div>
+</div>
 
-        <div class="most-wanted__container">
-            <img src="./images/f1.jpg" style="width: 20vw; border-radius: 10px;" alt="">
-          <i class="fa-regular fa-heart"></i>
-           <button>sale</button>
-        </div>
+<!-- Most Wanted -->
+<h2 style="margin-top: 4vw; margin-left: 10px;" id="most-wanted">Most Wanted</h2>
+<div class="most-wanted" style="margin-left: 10px; margin-right: 10px;">
 
-        <div class="most-wanted__container">
-            <img src="./images/f2.jpg" style="width: 20vw; border-radius: 10px;" alt="">
-           <i class="fa-regular fa-heart"></i>
-          <button>sale</button>
-        </div>
-
-        <div class="most-wanted__container">
-            <img src="./images/f3.jpg" style="width: 20vw; border-radius: 10px;" alt="">
-            <i class="fa-regular fa-heart"></i>
-            <button>sale</button>
-        </div>
+    <div class="most-wanted__container">
+        <img src="./images/f06.jpg" style="width: 20vw;border-radius: 10px;" alt="">
+        <i class="fa-regular fa-heart"></i>
+        <button>sale</button>
     </div>
 
-    <!-- block -->
-    <div class="block">
-        <div class="block__img">
-            <img src="./images/offer.jpg" alt="">
-        </div>
-        <div class="block__text">
-            <h2>Limited Offer</h2>
-            <h4>35% OFF on this for the first 30 Customer</h4>
-            <button>Show Now <i class="fa-solid fa-arrow-right"></i></button>
-        </div>
+    <div class="most-wanted__container">
+        <img src="./images/f1.jpg" style="width: 20vw; border-radius: 10px;" alt="">
+        <i class="fa-regular fa-heart"></i>
+        <button>sale</button>
     </div>
-   
-    <!-- inputbox -->
-     <div class="inputbox" style="text-align: center;  margin-top: 4vw;">
-        <h2>Join our News Letter</h2>
-        <p >Signup for our email newspaper to get exclusive discounts, upadtes and more</p>
-        <input type="text" class="box"> <br>
-        <button>Subscribe <i class="fa-solid fa-arrow-right"></i></button>
-     </div>
 
-     <!-- foother -->      
-    <div class="footer">
-        <h2>Nostra</h2>
-        <p>The Standard chunk of Lorem ipsum used since the 1500s is reprodused below for those interest</p>
-        <p class="footer-icons">
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-facebook"></i>
-        </p>
-        <p>@ 2023 Nostra.com</p>
-    </div>    
+    <div class="most-wanted__container">
+        <img src="./images/f05.jpg" style="width: 20vw; border-radius: 10px;" alt="">
+        <i class="fa-regular fa-heart"></i>
+        <button>sale</button>
+    </div>
 
-    <!-- Link javascript -->
-    <script src="script.js"></script>
+    <div class="most-wanted__container">
+        <img src="./images/f04.jpg" style="width: 20vw; border-radius: 10px;" alt="">
+        <i class="fa-regular fa-heart"></i>
+        <button>sale</button>
+    </div>
+
+    <div class="most-wanted__container">
+        <img src="./images/f02.jpg" style="width: 20vw; border-radius: 10px;" alt="">
+        <i class="fa-regular fa-heart"></i>
+        <button>sale</button>
+    </div>
+    <div class="most-wanted__container">
+        <img src="./images/f4.jpg" style="width: 20vw; border-radius: 10px;" alt="">
+        <i class="fa-regular fa-heart"></i>
+        <button>sale</button>
+    </div>
+    <div class="most-wanted__container">
+        <img src="./images/f03.jpg" style="width: 20vw; border-radius: 10px;" alt="">
+        <i class="fa-regular fa-heart"></i>
+        <button>sale</button>
+    </div>
+    <div class="most-wanted__container">
+        <img src="./images/f05.jpg" style="width: 20vw; border-radius: 10px;" alt="">
+        <i class="fa-regular fa-heart"></i>
+        <button>sale</button>
+    </div>
+</div>
+
+<!-- block -->
+<div class="block">
+    <div class="block__img">
+        <img src="./images/offer.jpg" alt="">
+    </div>
+    <div class="block__text">
+        <h2>Limited Offer</h2>
+        <h4>35% OFF on this for the first 30 Customer</h4>
+        <button>Show Now <i class="fa-solid fa-arrow-right"></i></button>
+    </div>
+</div>
+
+<!-- inputbox -->
+<div class="inputbox" style="text-align: center;  margin-top: 4vw;">
+    <h2>Join our News Letter</h2>
+    <p>Signup for our email newspaper to get exclusive discounts, upadtes and more</p>
+    <input type="text" class="box"> <br>
+    <button>Subscribe <i class="fa-solid fa-arrow-right"></i></button>
+</div>
+
+<!-- foother -->
+<div class="footer">
+    <h2>Nostra</h2>
+    <p>The Standard chunk of Lorem ipsum used since the 1500s is reprodused below for those interest</p>
+    <p class="footer-icons">
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-facebook"></i>
+    </p>
+    <p>@ 2023 Nostra.com</p>
+</div>
+
+<!-- Link javascript -->
+<script src="script.js"></script>
 </body>
 
 </html>
