--- a/collection.html
+++ b/collection.html
@@ -37,8 +37,20 @@
             <p><a href="contact.html">Contact Us</a></p>
         </div>
         <div class="navbar__menu-1">
-            <i class="fa-solid fa-bars"></i>
+            <i id="side-navbar" class="fa-solid fa-bars" style="cursor: pointer;"></i>
         </div>
+    </div>
+
+    <!-- side navbar -->
+    <div class="side-menu">
+        <div class="side-menu-bar">
+            <p><a href="index.html">Home</a></p>
+            <p><a href="#new-arrival">New Arrival</a></p>
+            <p><a href="#most-wanted"> Most Wanted</a></p>
+            <p><a href="collection.html"> Collections</a></p>
+            <p><a href="contact.html">Contact Us</a></p>
+        </div>
+        <i id="side-navbar-close" class="fa-solid fa-xmark" style="cursor: pointer;"></i>
     </div>
 
     <!-- container -->
@@ -148,7 +160,9 @@
             <i class="fa-brands fa-facebook"></i>
         </p>
         <p>@ 2023 Nostra.com</p>
-    </div>    
+    </div>  
+    <!-- linked js   -->
+     <script src="collection.js"> </script>
 </body>
 
 </html>
