--- a/collection.html
+++ b/collection.html
@@ -109,27 +109,27 @@
                         <p style="font-size: 1vw;"><i class="fa-solid fa-indian-rupee-sign"></i> 220</p>
                     </div>
                     <div class="product-images">
-                        <img src="./images/f05.jpg" alt="" style="width: 20vw;">
+                        <img src="./images/f05.jpg" alt="" >
                         <h4>Beach Shirt</h4>
                         <p style="font-size: 1vw;"><i class="fa-solid fa-indian-rupee-sign"></i> 220</p>
                     </div>
                     <div class="product-images">
-                        <img src="./images/f06.jpg" alt="" style="width: 20vw;">
+                        <img src="./images/f06.jpg" alt="">
                         <h4>Shirt Party Red</h4>
                         <p style="font-size: 1vw;"><i class="fa-solid fa-indian-rupee-sign"></i> 220</p>
                     </div>
                     <div class="product-images">
-                        <img src="./images/f03.jpg" alt="" style="width: 20vw;">
+                        <img src="./images/f03.jpg" alt="" >
                         <h4>Party Floral Shirt</h4>
                         <p style="font-size: 1vw;"><i class="fa-solid fa-indian-rupee-sign"></i> 220</p>
                     </div>
                     <div class="product-images">
-                        <img src="./images/f06.jpg" alt="" style="width: 20vw;">
+                        <img src="./images/f06.jpg" alt="">
                         <h4>Shirt Party Red</h4>
                         <p style="font-size: 1vw;"><i class="fa-solid fa-indian-rupee-sign"></i> 220</p>
                     </div>
                     <div class="product-images">
-                        <img src="./images/f1.jpg" alt="" style="width: 20vw;">
+                        <img src="./images/f1.jpg" alt="" >
                         <h4>Floral Summer Shirt</h4>
                         <p style="font-size: 1vw;"><i class="fa-solid fa-indian-rupee-sign"></i> 220</p>
                     </div>
