--- a/collection.html
+++ b/collection.html
@@ -66,7 +66,7 @@
                 </div>
 
                 <div class="filter-section-color">
-                    <h3 class="filter-section-color_head" style="margin-bottom: 10px; margin-top: 10px;">Colors</h3>
+                    <h3 cl ass="filter-section-color_head" style="margin-bottom: 10px; margin-top: 10px;">Colors</h3>
                     <input type="checkbox"> Red <br>
                     <input type="checkbox"> Blue <br>
                     <input type="checkbox"> White <br>
@@ -88,22 +88,22 @@
 
                 <div class="product-sections-images">
                     <div class="product-images">
-                        <img src="./images/f1.jpg" alt="" style="width: 20vw;">
+                        <img src="./images/f1.jpg" alt="" >
                         <h4>Floral Summer Shirt</h4>
                         <p style="font-size: 1vw;"><i class="fa-solid fa-indian-rupee-sign"></i> 220</p>
                     </div>
                     <div class="product-images">
-                        <img src="./images/f02.jpg" alt="" style="width: 20vw;">
+                        <img src="./images/f02.jpg" alt="" >
                         <h4> Party Floral Shirt</h4>
                         <p style="font-size: 1vw;"><i class="fa-solid fa-indian-rupee-sign"></i> 220</p>
                     </div>
                     <div class="product-images">
-                        <img src="./images/f03.jpg" alt="" style="width: 20vw;">
+                        <img src="./images/f03.jpg" alt="" >
                         <h4>Shirt Party Red</h4>
                         <p style="font-size: 1vw;"><i class="fa-solid fa-indian-rupee-sign"></i> 220</p>
                     </div>
                     <div class="product-images">
-                        <img src="./images/f04.jpg" alt="" style="width: 20vw;">
+                        <img src="./images/f04.jpg" alt="" >
                         <h4>Floral Summer Shirt</h4>
                         <p style="font-size: 1vw;"><i class="fa-solid fa-indian-rupee-sign"></i> 220</p>
                     </div>
